- udon: add inject section - deduce video size from poster - use conditional image type - fix video/image overflow size - add video encode commands

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,7 +36,6 @@ pre {
     border: 1px solid var(--accent);
     border-radius: 4px;
     padding: 0.5em 1em;
-    font-size: 1.1em;
     max-width: 100%;
     overflow-x: auto;
 }
@@ -66,6 +65,13 @@ h4 {
     a {
         margin-right: 10px;
     }
+}
+
+video,
+picture,
+img {
+    max-width: 100%;
+    height: auto;
 }
 
 .toc {
